crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__discard.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ Config /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/ 1 change ┐"
"│ github            │  [runner]                                                │"
"│ poll              │                                                          │"
"│ review_requests   │  claude          ‹default: claude›                       │"
"│ runner            │  max_concurrent  ‹default: 2›                            │"
"│ profiles          │  timeout_secs    ‹default: 1800›                         │"
"│   vuln            │  read_paths      ‹default: none›                         │"
"│                   │  model           ‹default: auto›                         │"
"│                   │  manual_reviews  false                                   │"
"│                   │                                                          │"
"│      ┌ Discard? ──────────────────────────────────────────────────────┐      │"
"│      │ Discard 1 change unsaved?                                      │      │"
"│      │                                                                │      │"
"│      │ y discard · any other key keeps editing                        │      │"
"│      └────────────────────────────────────────────────────────────────┘      │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                                                                              │"
"│ hold queued reviews until you start them                                     │"
"│ … checking                 + add · - remove · f find · u unset · ^S save · ? │"
"└──────────────────────────────────────────────────────────────────────────────┘"
