crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__held.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ Config /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml┐"
"│ github            │  [github]                                                │"
"│ poll              │                                                          │"
"│ review_requests   │  api_url  ‹default: https://api.github.com›              │"
"│ runner            │  git_url  ‹default: https://github.com›                  │"
"│ profiles          │                                                          │"
"│   vuln            │                                                          │"
"│   + profile       │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│      ┌ Manual reviews off? ───────────────────────────────────────────┐      │"
"│      │ This turns manual reviews off: 3 held reviews will start.      │      │"
"│      │                                                                │      │"
"│      │ y save · any other key cancels                                 │      │"
"│      └────────────────────────────────────────────────────────────────┘      │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                                                                              │"
"│ ✓ loads                   + profile · - remove · K/J move · ^S save · ? help │"
"└──────────────────────────────────────────────────────────────────────────────┘"
