crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__lists.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ Config /home/u/.config/sanic-review/config.toml → /home/u/dotfiles 2 changes ┐"
"│ github            │  [review_requests]                                       │"
"│ poll              │                                                          │"
"│ review_requests   │  teams        *                                          │"
"│ runner            │               !org/storage                               │"
"│ profiles          │  skip_titles  ‹default: none›                            │"
"│   vuln            │  skip_drafts  ‹default: true›                            │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│                   │                                                          │"
"│ which of your teams' requests count: the last glob that matches wins, `!` exc│"
"│ … checking                     + add · - remove · u unset · ^S save · ? help │"
"└──────────────────────────────────────────────────────────────────────────────┘"
