crates/cli/src/tui/config/snapshots/sanic_review__tui__config__tests__profile.snap
---
source: crates/cli/src/tui/config/tests.rs
expression: draw(&editor).backend()
---
"┌ /home/u/.config/sanic-review/config.toml → /home/u/dotfiles/sanic.toml ──────┐"
"│ # seconds before a run is killed                                             │"
"│ # timeout_secs = 1800                                              (default) │"
"│ # more directories the agent may read                                        │"
"│ # read_paths = []                                                  (default) │"
"│ # the review model; `auto` is your own Claude default                        │"
"│ # model = "auto"                                                   (default) │"
"│ # hold queued reviews until you start them                                   │"
"│ manual_reviews = true                                                        │"
"│                                                                              │"
"│ [tui]                                                                        │"
"│ # `emacs` or `vi` keys in text fields; unset, guessed from readline and $EDI │"
"│ # keys = "emacs"                                                   (guessed) │"
"│                                                                              │"
"│ [profile.vuln]                                                               │"
"│ # files whose text goes in the agent's system prompt                         │"
"│ # instructions = []                                                (default) │"
"│ # skill directories the agent may read                                       │"
"│ # skills = []                                                      (default) │"
"│ What this config does ───────────────────────────────────────────────────────│"
"│ Counting starts once the config loads.                                       │"
"│──────────────────────────────────────────────────────────────────────────────│"
"│ ✓ loads            ↵ edit  + add  - remove  u unset  f find  ^S save  ? keys │"
"└──────────────────────────────────────────────────────────────────────────────┘"
